--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -25,7 +25,7 @@ template(name='ruser')
                     .spacer
                     .ui.big.inline.right.aligned.header(class=post_header_class)
                         |!{display_name} 
-                        small(title='reputation') #{reputation}
+                        small(title='reputation') {{ commafy reputation }}
                         strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
                     div
