--- a/client/suser.jade
+++ b/client/suser.jade
@@ -25,7 +25,7 @@ template(name='suser_layout')
                     .spacer
                     a.ui.big.inline.header.say(class=post_header_class href="/site/#{site}/user/#{user_id}")
                         |!{display_name} 
-                        small(title='reputation') #{reputation}
+                        small(title='reputation') {{ commafy reputation }}
                         strong(title="#{site} rank")
                             small #
                             |#{site_rank} 
@@ -258,7 +258,7 @@ template(name='user_comment_item')
             a.ui.small.header.say.item(href="/site/#{../site}/user/#{user_id}")
                 img.ui.avatar.image(src=profile_image)
                 |!{display_name}
-                small #{reputation}
+                small {{ commafy reputation }}
                 small !{location}
 
     .ui.grey.inline.header(title='score') #{score}
