big, move some lib files to client, 20q in u, stack_page to q,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -47,7 +47,9 @@ template(name='smart_tagger')
             //     img.ui.mini.rounded.inline.image(src="{{c.url image height=200 width=200 gravity='face' crop='fill'}}" class='invert')
             |#{title}
 
-
+template(name='loading')
+    .ui.basic.center.aligned.segment
+        i.massive.grey.yin.yang.loading.icon
 
 template(name='print_this')
     i.link.code.icon.print_this(title='print to console')
