--- a/client/sr.jade
+++ b/client/sr.jade
@@ -3,7 +3,7 @@ template(name='subreddit_docs')
         .ui.stackable.grid
             .row
                 .ui.twelve.wide.column
-                    a.ui.circular.basic.icon.button(href="/subreddits")
+                    a.ui.circular.basic.icon.button(href="/reddit")
                         i.reddit.large.icon
                     img.get_info.shadowed.ui.inline.image(src=logo_url )
                     .ui.inline.header #{data.display_name}
