--- a/client/suser.jade
+++ b/client/suser.jade
@@ -109,7 +109,7 @@ template(name='suser_tags')
 template(name='suser_answers')
 template(name='suser_dashboard')
     .six.wide.column
-        .f12.say.pointer
+        .f11.say
             |!{about_me}
         if website_url
             a.ui.basic.button.say(href=website_url target="_window")
